# QtMessenger

./: .gitignore  CMakeLists.txt  README.md
MsgClient/: CMakeLists.txt  client.cpp  client.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
MsgClient/proto/: serialize.proto
MsgServer/: CMakeLists.txt  connectedtabbar.cpp  connectedtabbar.h  connectedtabbar.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  server.cpp  server.h  sthread.cpp  sthread.h
MsgServer/proto/: serialize.proto
MsgServer/resources/css/: style.css
Test/: CMakeLists.txt  tst_servertest.cpp  tst_testmessenger.cpp
